Bug 257601 - [WGSL] Variables initializer shouldn't be a reference
Summary: [WGSL] Variables initializer shouldn't be a reference
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tadeu Zagallo
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-06-01 03:02 PDT by Tadeu Zagallo
Modified: 2023-06-05 01:54 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tadeu Zagallo 2023-06-01 03:02:31 PDT
...
Comment 1 Radar WebKit Bug Importer 2023-06-01 03:02:47 PDT
<rdar://problem/110105334>
Comment 2 Tadeu Zagallo 2023-06-01 03:13:24 PDT
Pull request: https://github.com/WebKit/WebKit/pull/14584
Comment 3 EWS 2023-06-05 01:54:03 PDT
Committed 264860@main (e90fdfdcdf8c): <https://commits.webkit.org/264860@main>

Reviewed commits have been landed. Closing PR #14584 and removing active labels.